...
            android:layout_below="@+id/aboutUnibot"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signOut"
            android:layout_weight="16.75"

            android:layout_below="@+id/aboutUs"
            android:background="@drawable/hover_button"
            android:textColor="#FFFFFF"
            android:text="Sign out" android:textSize="18dp"


            />
        <View android:layout_height="2px"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
...
