...
        </LinearLayout>
        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="+"
            android:background="@drawable/plus_minus_btn"
            android:id="@+id/plus6"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"

            />
    </LinearLayout>
...
            android:textSize="17dp"
            android:textColor="#ff407f"
            android:clickable="true"/>

        <TextView
            android:layout_width="0dp"
            android:id="@+id/add_grades"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_weight="5"
            android:textSize="17dp"
            android:textColor="#ff407f"
            android:gravity="center"
...
